--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,9 +4,14 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Welcome to banana world</p>
-    <p class="secret-text">Feel free to logout and sign in again</p>
-    <p class="secret-text">'Submit a Secret button' is still in progress, so don't report as a bug ✌ </p>
+    <h1 class="display-3">You've Discovered My Secret!</h1>
+    <% if(locals.secrets){ %>
+      <% secrets.forEach((item) =>{ %>
+        <p class="secret-text"><%= item%></li></p>
+     <% });} else{ %>
+      <p class="secret-text" >  Demo text.</p>
+   <%  } %> 
+  <hr>
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
